--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "django": true,
             //"host": "localhost",
             //"port": 9000,
-            "justMyCode": false
+            "justMyCode": true
         }
     ]
 }
